handling spacing bug

--- a/style.css
+++ b/style.css
@@ -130,13 +130,14 @@ body {
     background-image: linear-gradient(to right, #ACE1AF,  	#E5E4E2);
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
-    width: 100%;
-
+    width: auto;
 }
 
 p {
     margin-right: 10%;
-
+    text-indent: 3rem;
+    font-size: 20px;
+    text-align: justify;
 }
 
 ol, ul {
@@ -183,6 +184,7 @@ a {
 #front-end-sections-list {
     list-style-type: upper-alpha ;
     margin-left: 10%;
+    margin-right: 10%;
     
 }
 #front-end-sections-list h3 {
@@ -191,11 +193,7 @@ a {
 #front-end-sections-list p{
     margin-left: 0;
 }
-p {
-    text-indent: 3rem;
-    font-size: 20px;
-    text-align: justify;
-}
+
 footer ul {
     list-style-type: none;
 }
